2006-05-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp: Added missing include file (undefined
	gamma function).

	* configure.ac, Makefile.am, tests/Makefile.am: Fixed a problem
	with different line endings on Windows based platforms. Now,
	sed program is necessary for performing tests.

2006-05-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/cblas.cpp: Fixed bug [1483125]. Now a complex dot
	product is properly returned by a dot function when using ACML
	blas libraries. Thanks to Danilo Zanatta for this bug report.

2006-05-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itmex.h: Fixed missing std:: specifiers before complex<>
	types.

2006-05-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/logexpfunc.h, itpp/base/matfunc.h,
	itpp/base/specmat.cpp, itpp/comm/channel.cpp,
	itpp/comm/modulator.cpp, itpp/signal/sigfun.cpp,
	itpp/signal/transforms.cpp, itpp/srccode/vq.h: 
	Fixed bug [1480535]. Now needed_bits() returns a proper number of
	bits required to represent integer `n', e.g. "needed_bits(0) = 1", 
	"needed_bits(7) = 3" and "needed_bits(8) = 4".

	* itpp/itmex.h: Fixed a small bug related to missing #include
	statement and cleaned up the code.

2006-05-02  Erik G. Larsson <erik_g_larsson@users.sourceforge.net>

	* itpp/base/svec.h: Fixed a bug in the == operator. Thanks to
	Mattias Andersson for discovering the bug.

2006-04-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/authors.doc, doc/local/index.doc.in,
	doc/local/sources.mk: Added AUTHORS page.

	* doc/local/help_wanted.doc: Cosmetic changes.
	
2006-04-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/galois.cpp: Added missing include file with log2()
	function declaration.

	* doc/sourceforge/howto_release_itpp.html: Updated due to CVS to
	SVN repository migration.

	* Redesign, separation and regrouping of some functions from the
	base module.

	The following changes have been applied: